--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,25 @@ services:
       - ./app:/app
     working_dir: /app
     tty: true
+    depends_on:
+      - postgres
+    env_file:
+      - app/.env
+
+
+  postgres:
+    image: postgres:12-alpine
+    container_name: nextauth-postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=nextauth
+    
+volumes:
+  postgres:
+    name: nextauth-sample
+
