--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: nextauth-app
     ports:
       - "3000:3000"
+      - "5555:5555" # for prisma studio
     volumes:
       - ./app:/app
     working_dir: /app
